--- a/Experiments/madeleine/experiment3/hellopeople/pom.xml
+++ b/Experiments/madeleine/experiment3/hellopeople/pom.xml
@@ -5,7 +5,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>coms309</groupId>
-  <artifactId>hellopeople</artifactId>
+  <artifactId>experiment3</artifactId>
   <version>1.0.0</version>
 
   <!-- To make it a spring boot project -->
@@ -15,7 +15,7 @@
     <version>3.1.4</version>
   </parent>
 
-  <name>hellopeople</name>
+  <name>experiment3</name>
 
   <properties>
 
