--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=cydrop
 
-spring.datasource.url=jdbc:mysql://coms-3090-038.class.las.iastate.edu:3306/CydropReminder?useSSL=false&serverTimezone=CST&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://coms-3090-038.class.las.iastate.edu:3306/CydropReminder?useSSL=false
 spring.datasource.username=prak
 spring.datasource.password=458cbafe00da8721
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
