Added admin sections and tested populating inventory data from array

--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
         <activity
             android:name=".ClientNavbarMainActivity"
             android:exported="true"
-            android:label="@string/title_activity_bottom_navbar"
+            android:label="ClientNavbarView"
+            android:theme="@style/Theme.CyDropFrontend" />
+        <activity
+            android:name=".AdminNavbarMainActivity"
+            android:exported="true"
+            android:label="AdminNavbarView"
             android:theme="@style/Theme.CyDropFrontend" />
         <activity
             android:name=".MainActivity"
