--- a/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Experiments/namin_frontend_experiemnts/ExperimentalFrontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+
+
+        android:usesCleartextTraffic="true"
+
+
         android:supportsRtl="true"
         android:theme="@style/Theme.CyDropFrontend"
         tools:targetApi="31">
