--- a/Experiments/Fury(Prakarsha) Poudel/springboot_unit1_3_petclinic_example/Spring/src/main/resources/application.properties
+++ b/Experiments/Fury(Prakarsha) Poudel/springboot_unit1_3_petclinic_example/Spring/src/main/resources/application.properties
@@ -4,21 +4,22 @@
 # Keep the parameters after the '?' to avoid a jdbc warning
 # Text after last '/' is the database. This should be created in your mysql server
 # In this particular case, create 'petclinic' database by running the command 'CREATE DATABASE petclinic' in your mysql server.
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://coms-309-038.class.las.iastate.edu:3306/testSchema?useSSL=false
+spring.datasource.username=prak
+spring.datasource.password=458cbafe00da8721
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+
+
+
 
 # this is the port your web server will run on
 server.port=8080
 
-# JPA
-# This tells jdbc to create the tables if they do not already exist
-# Defaults to none, in which case you must make the tables to match the Entity owners
-spring.jpa.hibernate.ddl-auto=create
 
-
-logging.file=application.log
+logging.file.name=application.log
 # Logging
 logging.level.org.springframework=INFO
