--- a/Experiments/Fury(Prakarsha) Poudel/Demo-2/pom.xml
+++ b/Experiments/Fury(Prakarsha) Poudel/Demo-2/pom.xml
@@ -1,64 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+    <groupId>coms309</groupId>
+    <artifactId>onetoone</artifactId>
+    <version>1.0.0</version>
 
-    <groupId>org.example</groupId>
-    <artifactId>Demo-2</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <!-- To make it a spring boot project -->
     <parent>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>3.0.0</version> <!-- Specify the Spring Boot version here directly -->
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.4</version>
     </parent>
 
+    <name>one-to-one</name>
+
+    <properties>
+
+        <!-- Generic properties -->
+        <!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
+        <!--    <java.version>11</java.version>-->
+
+    </properties>
+
     <dependencies>
-        <!-- Spring Boot Starter Web for building web applications -->
+
+        <!-- Spring Boot Web dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Spring Data JPA for data persistence -->
+        <!-- The H2 database dependency -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- MYSQL dependencies -->
+        <!--	<dependency>-->
+        <!--	  <groupId>mysql</groupId>-->
+        <!--	  <artifactId>mysql-connector-java</artifactId>-->
+        <!--	</dependency>-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+
+        <!-- The ORM JPA specs/hibernate impl -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- MySQL Connector if you are using a MySQL database -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.32</version> <!-- Specify the version here -->
-            <scope>runtime</scope>
-        </dependency>
-
-        <!-- Spring Boot Test dependencies -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
