--- a/Experiments/madison/demo2/AndroidExample/app/src/main/AndroidManifest.xml
+++ b/Experiments/madison/demo2/AndroidExample/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,23 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CyDropFrontend"
+        android:theme="@style/Theme.AndroidExample"
         tools:targetApi="31">
         <activity
-            android:name=".ClientNavbarMainActivity"
-            android:exported="true"
-            android:label="ClientNavbarView"
-            android:theme="@style/Theme.CyDropFrontend" />
-        <activity
-            android:name=".AdminNavbarMainActivity"
-            android:exported="true"
-            android:label="AdminNavbarView"
-            android:theme="@style/Theme.CyDropFrontend" />
-        <activity
             android:name=".SignupActivity"
-            android:exported="true"
-            android:label="Signup"
-            android:theme="@style/Theme.CyDropFrontend" />
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
