--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:label="Signup"
             android:theme="@style/Theme.CyDropFrontend" />
         <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:label="Login"
+            android:theme="@style/Theme.CyDropFrontend" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
