--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CyDropFrontend"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ClientNavbarMainActivity"
             android:exported="true"
@@ -34,6 +35,11 @@
             android:name=".LoginActivity"
             android:exported="true"
             android:label="Login"
+            android:theme="@style/Theme.CyDropFrontend" />
+        <activity
+            android:name=".VetDetails"
+            android:exported="true"
+            android:label="VetDetails"
             android:theme="@style/Theme.CyDropFrontend" />
         <activity
             android:name=".MainActivity"
