--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,android,maven
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,android,maven
 
+.DS_Store
+
 ### Android ###
 # Gradle files
 .gradle/
