--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -15,39 +15,43 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CyDropFrontend"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
+        tools:targetApi="31">
+
         <activity
             android:name=".ClientNavbarMainActivity"
             android:exported="true"
             android:label="ClientNavbarView"
             android:theme="@style/Theme.CyDropFrontend" />
+
         <activity
             android:name=".AdminNavbarMainActivity"
             android:exported="true"
             android:label="AdminNavbarView"
             android:theme="@style/Theme.CyDropFrontend" />
+
         <activity
             android:name=".SignupActivity"
             android:exported="true"
             android:label="Signup"
             android:theme="@style/Theme.CyDropFrontend" />
+
         <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:label="Login"
             android:theme="@style/Theme.CyDropFrontend" />
+
         <activity
-            android:name=".VetDetails"
+            android:name=".VetDetailsActivity"
             android:exported="true"
             android:label="VetDetails"
             android:theme="@style/Theme.CyDropFrontend" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
