Websocket Config and pom dependencies

--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -64,6 +64,11 @@
             <optional>true</optional>
         </dependency>
 
+        <!--dependency for websocket-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
