editted and added chat pages, fixed return buttons

--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -48,6 +48,12 @@
             android:theme="@style/Theme.CyDropFrontend" />
 
         <activity
+            android:name=".VetChatActivity"
+            android:exported="true"
+            android:label="VetChat"
+            android:theme="@style/Theme.CyDropFrontend" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
