--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -15,43 +15,43 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CyDropFrontend"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".VetNavbarMainActivity"
+            android:exported="false"
+            android:theme="@style/Theme.CyDropFrontend" />
         <activity
             android:name=".ClientNavbarMainActivity"
             android:exported="true"
             android:label="ClientNavbarView"
             android:theme="@style/Theme.CyDropFrontend" />
-
         <activity
             android:name=".AdminNavbarMainActivity"
             android:exported="true"
             android:label="AdminNavbarView"
             android:theme="@style/Theme.CyDropFrontend" />
-
         <activity
             android:name=".SignupActivity"
             android:exported="true"
             android:label="Signup"
             android:theme="@style/Theme.CyDropFrontend" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:label="Login"
             android:theme="@style/Theme.CyDropFrontend" />
-
         <activity
             android:name=".VetDetailsActivity"
             android:exported="true"
             android:label="VetDetails"
             android:theme="@style/Theme.CyDropFrontend" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
