added pathway for customer chat page

--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -51,6 +51,11 @@
             android:exported="true"
             android:label="VetChat"
             android:theme="@style/Theme.CyDropFrontend" />
+        <activity
+            android:name=".CustomerChatActivity"
+            android:exported="true"
+            android:label="VetChat"
+            android:theme="@style/Theme.CyDropFrontend" />
 
         <activity
             android:name=".MainActivity"
