added logic for adding and deleting medications

--- a/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/CyDropFrontend/app/src/main/AndroidManifest.xml
@@ -64,6 +64,12 @@
             android:theme="@style/Theme.CyDropFrontend" />
 
         <activity
+            android:name=".EditMedsActivity"
+            android:exported="true"
+            android:label="Meds"
+            android:theme="@style/Theme.CyDropFrontend" />
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
