--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,21 @@
 build-job:
   stage: build
   tags:
-    - prak_backend_tag
+    - backend_tag
   script:
     - echo "Hello, $GITLAB_USER_LOGIN!"
 
 test-job1:
   stage: test
   tags:
-    - prak_backend_tag
+    - backend_tag
   script:
     - echo "This job tests something"
 
 test-job2:
   stage: test
   tags:
-    - prak_backend_tag
+    - backend_tag
   script:
     - echo "This job tests something, but takes more time than test-job1."
     - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
@@ -25,7 +25,7 @@ test-job2:
 deploy-prod:
   stage: deploy
   tags:
-    - prak_backend_tag
+    - backend_tag
   script:
     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
   environment: production
