--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,13 @@ maven-build:
     - backend_tag
   script:
     - cd Backend
-    - export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+    - export JAVA_HOME=$(/usr/libexec/java_home -v 17)  # Use macOS-specific command
     - export PATH=$JAVA_HOME/bin:$PATH
-    - echo $JAVA_HOME
-    - java -version
-    - mvn -version
-    - mvn package
+    - echo "JAVA_HOME is set to: $JAVA_HOME"           # Debug output
+    - ls -la $JAVA_HOME                                # Verify JAVA_HOME path
+    - java -version                                    # Check Java installation
+    - mvn -version                                     # Ensure Maven finds Java
+    - mvn package                                      # Build the application
   artifacts:
     paths:
       - Backend/target/*.jar
@@ -25,7 +26,6 @@ maven-build:
       - main
     changes:
       - Backend/**/*
-
 
 maven-test:             
   stage: maventest     
