--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,9 @@ maven-build:
     - backend_tag
   script:
     - cd Backend
-    - export JAVA_HOME=/usr/lib/jvm/jre-17-openjdk-17.0.11.0.9-2.el9.x86_64
-    - export PATH=$JAVA_HOME/bin:$PATH
+    - mvn package
+    # - export JAVA_HOME=/usr/lib/jvm/jre-17-openjdk-17.0.11.0.9-2.el9.x86_64
+    # - export PATH=$JAVA_HOME/bin:$PATH
   artifacts:
     paths:
       - Backend/target/*.jar
